# Text_game

./: CMakeLists.txt  CMakePresets.json  README.md  build.py  conanfile.py
scripts/deployed/: test-linux.sh  test-macos.sh  test.ps1
scripts/fedora/: build.sh  docker-entrypoint.sh  docker.sh  install-deps.sh  pack.sh  test.sh
scripts/macos/: build.sh  command.sh  docker.sh  install-deps.sh  pack.sh  run.sh  test.sh
scripts/ubuntu/: build.sh  install-deps.sh  run.sh  test.sh
scripts/windows/: build.ps1  docker.ps1  install-deps.ps1  pack.ps1  run.ps1  test.ps1
src/: Command.cpp  Command.h  Item.cpp  Item.h  Location.cpp  Location.h  Player.cpp  Player.h  Utils.cpp  Utils.h  World.cpp  World.h  main.cpp
